--- a/Index.html
+++ b/Index.html
@@ -1,66 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Educação Financeira nas Escolas</title>
-  <link rel="shortcut icon" href="1.png" type="image/png">
- <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Educação Financeira nas Escolas</title>
+    <link rel="icon" href="1.png" type="image/png">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<header>
-<h1>Educação Financeira nas Escolas</h1>
-</header>
-<main>
-<section class="introducao">
-<h2>Por que a educação financeira é importante?</h2>
-<p>A educação financeira é fundamental para que as pessoas possam tomar decisões informadas sobre seus recursos financeiros e alcançar seus objetivos financeiros.</p>
-</section>
-<section class="oque-e">
-<h2>O que é educação financeira?</h2>
-<p>A educação financeira é o processo de ensinar habilidades e conhecimentos financeiros para que as pessoas possam gerenciar seus recursos financeiros de forma eficaz.</p>
-</section>
-<section class="beneficios">
-<h2>Benefícios da educação financeira nas escolas</h2>
-<ul>
-<li>Desenvolve habilidades financeiras;</li>
-<li>Ajuda a tomar decisões informadas;</li>
-<li>Prepara para o futuro financeiro;</li>
-<li>Reduz o estresse financeiro.</li>
-</ul>
-</section>
-<section class="contato">
-<h2>Entre em contato conosco</h2>
-<p>Para mais informações, envie um e-mail para:</p>
-<p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
-<p>Ou ligue para:</p>
-<p>(66) 98444-3942</p>
-<form
-  action="https://formspree.io/f/mnnqpkvy"
-  method="POST">
+    <header>
+        <nav>
+            <div class="logo">
+                <h1>Educação Financeira nas Escolas</h1>
+            </div>
+            <ul>
+                <li><a href="#introducao">Introdução</a></li>
+                <li><a href="#oque-e">O que é?</a></li>
+                <li><a href="#beneficios">Benefícios</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<label for="nome">Nome:</label>
-<input type="text" id="nome" name="nome">
+    <main>
+        <section id="introducao" class="introducao">
+            <h2>Por que a educação financeira é importante?</h2>
+            <p>A educação financeira é essencial para que as pessoas possam tomar decisões informadas sobre seus recursos financeiros e alcançar seus objetivos.</p>
+        </section>
 
+        <section id="oque-e" class="oque-e">
+            <h2>O que é educação financeira?</h2>
+            <p>A educação financeira envolve ensinar habilidades e conhecimentos necessários para gerenciar o dinheiro de forma eficaz e responsável.</p>
+        </section>
 
-<label for="email">E-mail:</label>
-<input type="email" id="email" name="email">
+        <section id="beneficios" class="beneficios">
+            <h2>Benefícios da educação financeira nas escolas</h2>
+            <ul>
+                <li>Desenvolvimento de habilidades financeiras práticas;</li>
+                <li>Auxílio na tomada de decisões informadas;</li>
+                <li>Preparação para o futuro financeiro;</li>
+                <li>Redução do estresse financeiro e emocional.</li>
+            </ul>
+        </section>
 
+        <section id="contato" class="contato">
+            <h2>Entre em contato conosco</h2>
+            <p>Para mais informações, envie um e-mail para:</p>
+            <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
+             <p><a href="mailto:milenymendes01@gmail.com">milenymendes01@gmail.com</a></p>
+            <p>Ou ligue para:</p>
+            <p>(66) 98444-3942</p>
 
-<label for="telefone">Telefone:</label>
-<input type="tel" id="telefone" name="telefone">
+            <form id="contact-form" action="process_form.php" method="POST">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required>
 
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
 
-<label for="duvida">Você tem alguma dúvida?</label>
-<textarea id="duvida" name="duvida"></textarea>
+                <label for="telefone">Telefone:</label>
+                <input type="tel" id="telefone" name="telefone" required>
 
+                <label for="duvida">Você tem alguma dúvida?</label>
+                <textarea id="duvida" name="duvida" required></textarea>
 
-<button type="submit">Enviar</button>
-</form>
-</section>
-</main>
-<footer>
-<p>&copy; 2024 1s8-Mikael</p>
-</footer>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 1s8-Mikael</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
