--- a/Index.html
+++ b/Index.html
@@ -28,29 +28,35 @@
     <main>
         <section id="introducao" class="introducao">
             <h2>Por que a educação financeira é importante?</h2>
-            <p>A educação financeira é essencial para que as pessoas possam tomar decisões informadas sobre seus recursos financeiros e alcançar seus objetivos.</p>
+            <p>A educação financeira é essencial para que as pessoas possam tomar decisões informadas sobre seus recursos financeiros e alcançar seus objetivos. No mundo moderno, em que as opções de consumo se multiplicam e as dívidas se acumulam rapidamente, entender como gerenciar o dinheiro de maneira eficiente pode ser a chave para o sucesso pessoal e profissional. Além disso, a educação financeira ajuda a desenvolver habilidades para fazer escolhas mais inteligentes em relação ao consumo, ao investimento e ao planejamento para o futuro. Quando a educação financeira é ensinada desde a infância, a chance de adultos bem preparados financeiramente aumenta significativamente.</p>
+            <p>Infelizmente, muitos jovens e adultos não têm acesso a uma educação que os prepare adequadamente para lidar com questões financeiras do dia a dia. Isso leva a decisões impulsivas, endividamento descontrolado e dificuldades financeiras que poderiam ser evitadas com o conhecimento adequado. Por isso, inserir o tema educação financeira nas escolas é um passo fundamental para mudar essa realidade. Quando as crianças aprendem desde cedo a importância de poupar, investir e administrar seu dinheiro, elas se tornam adultas mais conscientes de suas escolhas financeiras e mais preparadas para a vida financeira que terão ao longo da vida.</p>
+            <p>Além disso, o ensino da educação financeira nas escolas promove uma cidadania mais ativa e responsável. Os jovens aprendem a importância de administrar não apenas seu próprio dinheiro, mas também a saber como as decisões financeiras impactam a economia em geral. Esse tipo de formação contribui para um país mais próspero, com cidadãos mais preparados para fazer escolhas conscientes, que beneficiam tanto suas finanças pessoais quanto a sociedade como um todo. A educação financeira também pode ajudar a diminuir as desigualdades sociais, pois proporciona a todos, independentemente de sua classe social, as mesmas oportunidades de aprender a controlar suas finanças e atingir seus objetivos.</p>
         </section>
 
         <section id="oque-e" class="oque-e">
             <h2>O que é educação financeira?</h2>
-            <p>A educação financeira envolve ensinar habilidades e conhecimentos necessários para gerenciar o dinheiro de forma eficaz e responsável.</p>
+            <p>A educação financeira é o processo de adquirir o conhecimento necessário para tomar decisões financeiras informadas e eficazes. Ela envolve entender conceitos como orçamento, poupança, crédito, dívida, investimentos, riscos e planejamento financeiro. O objetivo é capacitar as pessoas a administrar seu dinheiro de maneira inteligente, com responsabilidade e foco em objetivos de longo prazo. A educação financeira não é apenas sobre aprender a economizar ou ganhar dinheiro, mas também sobre entender como o dinheiro funciona em nossa vida e como ele pode ser usado para alcançar metas e realizar sonhos.</p>
+            <p>Embora o conceito de educação financeira seja bastante simples, sua aplicação no dia a dia pode ser bastante complexa. Envolve compreender os vários aspectos de nossas finanças pessoais e escolher os melhores caminhos para aumentar nossa riqueza, reduzir nossas dívidas e ter um futuro financeiro estável. A educação financeira abrange diversos temas, desde como organizar um orçamento familiar, entender taxas de juros e como investir em diferentes ativos, até como lidar com os imprevistos financeiros que surgem ao longo da vida. Ela é essencial para qualquer pessoa que deseje alcançar a independência financeira ou ter uma aposentadoria tranquila.</p>
+            <p>Na prática, a educação financeira começa com o entendimento de conceitos básicos, como receita, despesa e equilíbrio financeiro. Ao aprender como organizar suas finanças, uma pessoa pode começar a definir metas de curto e longo prazo, como economizar para uma viagem, comprar uma casa ou investir para a aposentadoria. As crianças, por exemplo, podem aprender sobre a diferença entre "necessidades" e "desejos", ou como fazer escolhas conscientes entre gastar dinheiro agora ou poupar para um objetivo futuro. Os adultos podem aprender a lidar com dívidas de maneira mais eficiente ou como investir seu dinheiro de forma mais rentável. A educação financeira permite que cada um faça escolhas mais inteligentes e que se sintam mais seguros em relação ao seu futuro financeiro.</p>
         </section>
 
         <section id="beneficios" class="beneficios">
             <h2>Benefícios da educação financeira nas escolas</h2>
             <ul>
-                <li>Desenvolvimento de habilidades financeiras práticas;</li>
-                <li>Auxílio na tomada de decisões informadas;</li>
-                <li>Preparação para o futuro financeiro;</li>
-                <li>Redução do estresse financeiro e emocional.</li>
+                <li><strong>Desenvolve habilidades financeiras:</strong> Ensinar educação financeira nas escolas ajuda os alunos a desenvolver habilidades essenciais para a vida adulta, como planejar, economizar e investir. Desde cedo, as crianças aprendem a lidar com orçamentos, fazer escolhas financeiras responsáveis e evitar o endividamento. Isso contribui para que se tornem adultos com maior controle sobre suas finanças pessoais e menos propensos a cair em armadilhas financeiras.</li>
+                <li><strong>Ajuda a tomar decisões informadas:</strong> A educação financeira permite que os indivíduos compreendam o impacto de suas decisões financeiras no curto, médio e longo prazo. Ao aprender como funcionam os juros compostos, o impacto do endividamento e as vantagens de um bom planejamento, as pessoas conseguem fazer escolhas mais assertivas. Isso é fundamental para evitar problemas financeiros como o superendividamento e o consumo irresponsável.</li>
+                <li><strong>Prepara para o futuro financeiro:</strong> A educação financeira prepara os alunos para um futuro mais estável, ajudando-os a entender a importância de poupar e investir desde cedo. Além disso, ela os capacita a tomar decisões mais informadas em momentos críticos, como quando abrir uma conta bancária, quando tomar empréstimos ou como planejar a aposentadoria. Essa preparação é um dos maiores benefícios, pois evita que as pessoas caiam em dificuldades financeiras mais tarde na vida.</li>
+                <li><strong>Reduz o estresse financeiro:</strong> Um dos maiores fatores de estresse para muitas pessoas é a falta de controle sobre suas finanças. O ensino de habilidades financeiras pode reduzir significativamente esse estresse, ao proporcionar uma visão mais clara de como lidar com dinheiro e finanças. Pessoas que compreendem os conceitos financeiros são mais propensas a ter uma relação mais saudável com o dinheiro, o que pode melhorar seu bem-estar geral e reduzir a ansiedade financeira.</li>
+                <li><strong>Promove a cidadania responsável:</strong> Ao ensinar educação financeira, as escolas não estão apenas preparando seus alunos para um futuro financeiro seguro, mas também para uma cidadania responsável. Pessoas bem informadas sobre como o sistema financeiro funciona são mais propensas a participar ativamente na economia, sendo mais responsáveis tanto com seus próprios recursos quanto com os de outros.</li>
+                <li><strong>Reduz desigualdades sociais:</strong> Quando a educação financeira é acessível a todos, ela tem o poder de nivelar o campo de jogo. Muitas famílias de baixa renda enfrentam dificuldades por não compreenderem como usar suas finanças de maneira estratégica. Ao dar a todos a oportunidade de aprender sobre gestão financeira, pode-se reduzir a disparidade entre as classes sociais, ajudando aqueles que mais precisam a se tornarem mais independentes financeiramente.</li>
             </ul>
         </section>
 
         <section id="contato" class="contato">
             <h2>Entre em contato conosco</h2>
-            <p>Para mais informações, envie um e-mail para:</p>
+            <p>Se você tem alguma dúvida sobre o conteúdo deste site ou deseja saber mais sobre como podemos levar a educação financeira para escolas e outras instituições, não hesite em nos contatar. Estamos aqui para ajudar, tirar dúvidas e fornecer mais informações sobre programas, cursos e outras iniciativas que podem transformar a vida de jovens e adultos através da educação financeira.</p>
+            <p>Você pode nos enviar um e-mail ou ligar diretamente para nossa equipe. Nosso compromisso é compartilhar conhecimentos que realmente façam a diferença na vida das pessoas. Se você tem interesse em desenvolver programas de educação financeira para sua instituição ou deseja saber mais sobre nossos projetos, estamos à disposição para conversarmos sobre como podemos colaborar.</p>
             <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
-             <p><a href="mailto:milenymendes01@gmail.com">milenymendes01@gmail.com</a></p>
             <p>Ou ligue para:</p>
             <p>(66) 98444-3942</p>
 
@@ -62,9 +68,8 @@
                 <input type="email" id="email" name="email" required>
 
                 <label for="telefone">Telefone:</label>
-                <input type="tel" id="telefone" name="telefone" required>
-
-                <label for="duvida">Você tem alguma dúvida?</label>
+                <input type="tel" id="telefone" name="telefone
+ <label for="duvida">Você tem alguma dúvida?</label>
                 <textarea id="duvida" name="duvida" required></textarea>
 
                 <button type="submit">Enviar</button>
