--- a/Index.html
+++ b/Index.html
@@ -57,23 +57,31 @@
             <p>Se você tem alguma dúvida sobre o conteúdo deste site ou deseja saber mais sobre como podemos levar a educação financeira para escolas e outras instituições, não hesite em nos contatar. Estamos aqui para ajudar, tirar dúvidas e fornecer mais informações sobre programas, cursos e outras iniciativas que podem transformar a vida de jovens e adultos através da educação financeira.</p>
             <p>Você pode nos enviar um e-mail ou ligar diretamente para nossa equipe. Nosso compromisso é compartilhar conhecimentos que realmente façam a diferença na vida das pessoas. Se você tem interesse em desenvolver programas de educação financeira para sua instituição ou deseja saber mais sobre nossos projetos, estamos à disposição para conversarmos sobre como podemos colaborar.</p>
             <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
+             <p><a href="milenymendes01@gmail.com">milenymendes01@gmail.com</a></p>
             <p>Ou ligue para:</p>
             <p>(66) 98444-3942</p>
+<form
+  action="https://formspree.io/f/mnnqpkvy"
+  method="POST">
 
-            <form id="contact-form" action="process_form.php" method="POST">
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" required>
+<label for="nome">Nome:</label>
+<input type="text" id="nome" name="nome">
 
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" required>
 
-                <label for="telefone">Telefone:</label>
-                <input type="tel" id="telefone" name="telefone
- <label for="duvida">Você tem alguma dúvida?</label>
-                <textarea id="duvida" name="duvida" required></textarea>
+<label for="email">E-mail:</label>
+<input type="email" id="email" name="email">
 
-                <button type="submit">Enviar</button>
-            </form>
+
+<label for="telefone">Telefone:</label>
+<input type="tel" id="telefone" name="telefone">
+
+
+<label for="duvida">Você tem alguma dúvida?</label>
+<textarea id="duvida" name="duvida"></textarea>
+
+
+<button type="submit">Enviar</button>
+</form>
         </section>
     </main>
 
