--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,7 @@
             <p>Se você tem alguma dúvida sobre o conteúdo deste site ou deseja saber mais sobre como podemos levar a educação financeira para escolas e outras instituições, não hesite em nos contatar. Estamos aqui para ajudar, tirar dúvidas e fornecer mais informações sobre programas, cursos e outras iniciativas que podem transformar a vida de jovens e adultos através da educação financeira.</p>
             <p>Você pode nos enviar um e-mail ou ligar diretamente para nossa equipe. Nosso compromisso é compartilhar conhecimentos que realmente façam a diferença na vida das pessoas. Se você tem interesse em desenvolver programas de educação financeira para sua instituição ou deseja saber mais sobre nossos projetos, estamos à disposição para conversarmos sobre como podemos colaborar.</p>
             <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
-             <p><a href="milenymendes01@gmail.com">milenymendes01@gmail.com</a></p>
+             <p><a href="mailto:milenymendes01@gmail.com">milenymendes01@gmail.com</a></p>
             <p>Ou ligue para:</p>
             <p>(66) 98444-3942</p>
 <form
@@ -84,7 +84,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 1s8-Mikael</p>
+        <p>&copy; 2024 1s8-Mikael-Mileny</p>
     </footer>
 
     <script src="script.js"></script>
