--- a/Index.html
+++ b/Index.html
@@ -52,7 +52,7 @@
 
         <section id="contato" class="contato">
             <h2>Entre em contato conosco</h2>
-            <p>Se você tem alguma dúvida sobre o conteúdo deste site ou deseja saber mais sobre como podemos levar a educação financeira para escolas e outras instituições, não hesite em nos contatar. Estamos aqui para ajudar, tirar dúvidas e fornecer mais informações sobre programas, cursos e outras iniciativas que podem transformar a vida de jovens e adultos através da educação financeira.</p>
+            <p>Se você tem alguma dúvida sobre o conteúdo deste site ou deseja saber mais sobre como podemos levar a educação financeira para escolas e outras instituições <a href="https://1drv.ms/w/c/326e12197e5ca681/Ec-fXje3Zt1BkMLWxlQcgYQB_OA8yfvqPqJOZKVZR0YmOg">Visite o PDF  Sobre o nosso projeto</a>,e não hesite em nos contatar. Estamos aqui para ajudar, tirar dúvidas e fornecer mais informações sobre programas, cursos e outras iniciativas que podem transformar a vida de jovens e adultos através da educação financeira.</p>
             <p>Você pode nos enviar um e-mail ou ligar diretamente para nossa equipe. Nosso compromisso é compartilhar conhecimentos que realmente façam a diferença na vida das pessoas. Se você tem interesse em desenvolver programas de educação financeira para sua instituição ou deseja saber mais sobre nossos projetos, estamos à disposição para conversarmos sobre como podemos colaborar.</p>
             <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
              <p><a href="mailto:milenymendes01@gmail.com">milenymendes01@gmail.com</a></p>
