--- a/Index.html
+++ b/Index.html
@@ -5,86 +5,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Educação Financeira nas Escolas</title>
+    <title>Segurança do Paciente</title>
     <link rel="icon" href="1.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-
-            <div class="logo">
-                <h1>Educação Financeira nas Escolas</h1>
-            </div>
-            
+        <div class="logo">
+            <h1>Segurança do Paciente nas Instituições de Saúde</h1>
+        </div>
     </header>
 
     <main>
         <section id="introducao" class="introducao">
-            <h2>Por que a educação financeira é importante?</h2>
-            <p>A educação financeira é essencial para que as pessoas possam tomar decisões informadas sobre seus recursos financeiros e alcançar seus objetivos. No mundo moderno, em que as opções de consumo se multiplicam e as dívidas se acumulam rapidamente, entender como gerenciar o dinheiro de maneira eficiente pode ser a chave para o sucesso pessoal e profissional. Além disso, a educação financeira ajuda a desenvolver habilidades para fazer escolhas mais inteligentes em relação ao consumo, ao investimento e ao planejamento para o futuro. Quando a educação financeira é ensinada desde a infância, a chance de adultos bem preparados financeiramente aumenta significativamente.</p>
-      <img src="imagem1-1080x720.webp" alt="Imagem sobre educação financeira"class="imagem-borda">
+            <h2>O que é Segurança do Paciente?</h2>
+            <p>Segurança do paciente é um princípio fundamental na área da saúde que visa minimizar riscos, prevenir danos e promover um cuidado mais seguro. Envolve ações voltadas para evitar erros e falhas nos atendimentos, garantindo que cada paciente receba o melhor cuidado possível.</p>
+            <img src="imagem1-1080x720.webp" alt="Profissionais de saúde cuidando de paciente" class="imagem-borda">
 
-            <p>Infelizmente, muitos jovens e adultos não têm acesso a uma educação que os prepare adequadamente para lidar com questões financeiras do dia a dia. Isso leva a decisões impulsivas, endividamento descontrolado e dificuldades financeiras que poderiam ser evitadas com o conhecimento adequado. Por isso, inserir o tema educação financeira nas escolas é um passo fundamental para mudar essa realidade. Quando as crianças aprendem desde cedo a importância de poupar, investir e administrar seu dinheiro, elas se tornam adultas mais conscientes de suas escolhas financeiras e mais preparadas para a vida financeira que terão ao longo da vida.</p>
-            <p>Além disso, o ensino da educação financeira nas escolas promove uma cidadania mais ativa e responsável. Os jovens aprendem a importância de administrar não apenas seu próprio dinheiro, mas também a saber como as decisões financeiras impactam a economia em geral. Esse tipo de formação contribui para um país mais próspero, com cidadãos mais preparados para fazer escolhas conscientes, que beneficiam tanto suas finanças pessoais quanto a sociedade como um todo. A educação financeira também pode ajudar a diminuir as desigualdades sociais, pois proporciona a todos, independentemente de sua classe social, as mesmas oportunidades de aprender a controlar suas finanças e atingir seus objetivos.</p>
+            <p>Historicamente, a segurança do paciente evoluiu ao longo do tempo. Durante a Guerra da Crimeia no século XIX, Florence Nightingale revolucionou os cuidados hospitalares ao implementar práticas de higiene, o que reduziu drasticamente a mortalidade. No Brasil, Ana Nery também contribuiu de forma pioneira para a organização da enfermagem no país, prestando assistência em campos de batalha.</p>
+
+            <p>Com os avanços da medicina no século XX e XXI, percebeu-se a necessidade de sistematizar a segurança nos cuidados, especialmente após evidências do aumento de erros médicos. Em 2004, a Organização Mundial da Saúde (OMS) lançou o programa “Segurança do Paciente”, e em 2005 foram definidas as 6 Metas Internacionais de Segurança.</p>
         </section>
 
         <section id="oque-e" class="oque-e">
-            <h2>O que é educação financeira?</h2>
-            <p>A educação financeira é o processo de adquirir o conhecimento necessário para tomar decisões financeiras informadas e eficazes. Ela envolve entender conceitos como orçamento, poupança, crédito, dívida, investimentos, riscos e planejamento financeiro. O objetivo é capacitar as pessoas a administrar seu dinheiro de maneira inteligente, com responsabilidade e foco em objetivos de longo prazo. A educação financeira não é apenas sobre aprender a economizar ou ganhar dinheiro, mas também sobre entender como o dinheiro funciona em nossa vida e como ele pode ser usado para alcançar metas e realizar sonhos.</p>
-            <p>Embora o conceito de educação financeira seja bastante simples, sua aplicação no dia a dia pode ser bastante complexa. Envolve compreender os vários aspectos de nossas finanças pessoais e escolher os melhores caminhos para aumentar nossa riqueza, reduzir nossas dívidas e ter um futuro financeiro estável. A educação financeira abrange diversos temas, desde como organizar um orçamento familiar, entender taxas de juros e como investir em diferentes ativos, até como lidar com os imprevistos financeiros que surgem ao longo da vida. Ela é essencial para qualquer pessoa que deseje alcançar a independência financeira ou ter uma aposentadoria tranquila.</p>
-         <img src="imagem2-1000x714.jpg" alt="Imagem ilustrativa sobre educação financeira"class="imagem-borda">
-
-            <p>Na prática, a educação financeira começa com o entendimento de conceitos básicos, como receita, despesa e equilíbrio financeiro. Ao aprender como organizar suas finanças, uma pessoa pode começar a definir metas de curto e longo prazo, como economizar para uma viagem, comprar uma casa ou investir para a aposentadoria. As crianças, por exemplo, podem aprender sobre a diferença entre "necessidades" e "desejos", ou como fazer escolhas conscientes entre gastar dinheiro agora ou poupar para um objetivo futuro. Os adultos podem aprender a lidar com dívidas de maneira mais eficiente ou como investir seu dinheiro de forma mais rentável. A educação financeira permite que cada um faça escolhas mais inteligentes e que se sintam mais seguros em relação ao seu futuro financeiro.</p>
+            <h2>Quais são as 6 Metas Internacionais de Segurança do Paciente?</h2>
+            <p>As metas estabelecidas pela OMS orientam profissionais e instituições a adotarem práticas seguras e eficazes. Conheça cada uma:</p>
+            <ul>
+                <li><strong>1. Identificar corretamente o paciente:</strong> Confirmações duplas de nome, data de nascimento e pulseiras de identificação evitam erros como administração de medicação errada.</li>
+                <li><strong>2. Melhorar a comunicação entre os profissionais:</strong> Informações claras e completas, especialmente durante passagens de plantão ou encaminhamentos, são essenciais para evitar falhas.</li>
+                <li><strong>3. Melhorar a segurança na prescrição e uso de medicamentos:</strong> Padronizar prescrições, revisar doses e garantir orientação adequada aos pacientes reduz riscos com medicamentos.</li>
+                <li><strong>4. Assegurar cirurgias em local, procedimento e paciente corretos:</strong> Protocolos como “pausa cirúrgica” e checklists ajudam a evitar erros durante procedimentos invasivos.</li>
+                <li><strong>5. Reduzir o risco de infecções associadas aos cuidados de saúde:</strong> Práticas como higienização das mãos, esterilização de materiais e controle de antibióticos são fundamentais.</li>
+                <li><strong>6. Reduzir o risco de danos ao paciente por quedas:</strong> Avaliar riscos individuais, usar sinalizações e manter o ambiente seguro são medidas eficazes de prevenção.</li>
+            </ul>
+            <img src="imagem2-1000x714.jpg" alt="Representação das metas de segurança do paciente" class="imagem-borda">
         </section>
 
         <section id="beneficios" class="beneficios">
-            <h2>Benefícios da educação financeira nas escolas</h2>
+            <h2>Por que falar sobre isso nas escolas e cursos da saúde?</h2>
             <ul>
-                <li><strong>Desenvolve habilidades financeiras:</strong> Ensinar educação financeira nas escolas ajuda os alunos a desenvolver habilidades essenciais para a vida adulta, como planejar, economizar e investir. Desde cedo, as crianças aprendem a lidar com orçamentos, fazer escolhas financeiras responsáveis e evitar o endividamento. Isso contribui para que se tornem adultos com maior controle sobre suas finanças pessoais e menos propensos a cair em armadilhas financeiras.</li>
-                <li><strong>Ajuda a tomar decisões informadas:</strong> A educação financeira permite que os indivíduos compreendam o impacto de suas decisões financeiras no curto, médio e longo prazo. Ao aprender como funcionam os juros compostos, o impacto do endividamento e as vantagens de um bom planejamento, as pessoas conseguem fazer escolhas mais assertivas. Isso é fundamental para evitar problemas financeiros como o superendividamento e o consumo irresponsável.</li>
-                <li><strong>Prepara para o futuro financeiro:</strong> A educação financeira prepara os alunos para um futuro mais estável, ajudando-os a entender a importância de poupar e investir desde cedo. Além disso, ela os capacita a tomar decisões mais informadas em momentos críticos, como quando abrir uma conta bancária, quando tomar empréstimos ou como planejar a aposentadoria. Essa preparação é um dos maiores benefícios, pois evita que as pessoas caiam em dificuldades financeiras mais tarde na vida.</li>
-                <li><strong>Reduz o estresse financeiro:</strong> Um dos maiores fatores de estresse para muitas pessoas é a falta de controle sobre suas finanças. O ensino de habilidades financeiras pode reduzir significativamente esse estresse, ao proporcionar uma visão mais clara de como lidar com dinheiro e finanças. Pessoas que compreendem os conceitos financeiros são mais propensas a ter uma relação mais saudável com o dinheiro, o que pode melhorar seu bem-estar geral e reduzir a ansiedade financeira.</li>
-                <li><strong>Promove a cidadania responsável:</strong> Ao ensinar educação financeira, as escolas não estão apenas preparando seus alunos para um futuro financeiro seguro, mas também para uma cidadania responsável. Pessoas bem informadas sobre como o sistema financeiro funciona são mais propensas a participar ativamente na economia, sendo mais responsáveis tanto com seus próprios recursos quanto com os de outros.</li>
-                <li><strong>Reduz desigualdades sociais:</strong> Quando a educação financeira é acessível a todos, ela tem o poder de nivelar o campo de jogo. Muitas famílias de baixa renda enfrentam dificuldades por não compreenderem como usar suas finanças de maneira estratégica. Ao dar a todos a oportunidade de aprender sobre gestão financeira, pode-se reduzir a disparidade entre as classes sociais, ajudando aqueles que mais precisam a se tornarem mais independentes financeiramente.</li>
+                <li><strong>Promove uma cultura de cuidado seguro:</strong> Ensinar desde a formação a importância da segurança torna os profissionais mais atentos e comprometidos com a vida do paciente.</li>
+                <li><strong>Reduz erros e eventos adversos:</strong> Conhecer as metas e praticá-las reduz consideravelmente as chances de erros em ambientes clínicos e hospitalares.</li>
+                <li><strong>Garante qualidade no atendimento:</strong> Profissionais treinados em segurança oferecem cuidados mais eficazes e humanos.</li>
+                <li><strong>Fortalece o trabalho em equipe:</strong> A comunicação clara e eficiente entre os profissionais melhora a dinâmica entre equipes multidisciplinares.</li>
+                <li><strong>Contribui para a formação ética e cidadã:</strong> Ter responsabilidade com o cuidado do outro é um valor fundamental para a atuação em saúde.</li>
+                <li><strong>Atende exigências legais e institucionais:</strong> Muitas instituições de saúde já exigem o conhecimento das Metas de Segurança em seus processos de admissão e capacitação.</li>
             </ul>
         </section>
 
         <section id="contato" class="contato">
             <h2>Entre em contato conosco</h2>
-            <p>Se você tem alguma dúvida sobre o conteúdo deste site ou deseja saber mais sobre como podemos levar a educação financeira para escolas e outras instituições <a href="https://1drv.ms/w/c/326e12197e5ca681/Ec-fXje3Zt1BkMLWxlQcgYQB_OA8yfvqPqJOZKVZR0YmOg">Visite o PDF  Sobre o nosso projeto</a>,e não hesite em nos contatar. Estamos aqui para ajudar, tirar dúvidas e fornecer mais informações sobre programas, cursos e outras iniciativas que podem transformar a vida de jovens e adultos através da educação financeira.</p>
-            <p>Você pode nos enviar um e-mail ou ligar diretamente para nossa equipe. Nosso compromisso é compartilhar conhecimentos que realmente façam a diferença na vida das pessoas. Se você tem interesse em desenvolver programas de educação financeira para sua instituição ou deseja saber mais sobre nossos projetos, estamos à disposição para conversarmos sobre como podemos colaborar.</p>
+            <p>Se você quiser saber mais sobre segurança do paciente. <a href="https://1drv.ms/w/c/326e12197e5ca681/Ec-fXje3Zt1BkMLWxlQcgYQB_OA8yfvqPqJOZKVZR0YmOg">clique aqui para acessar nosso material completo</a> ou envie uma mensagem pelos canais abaixo.</p>
+
             <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
-             <p><a href="mailto:milenymendes01@gmail.com">milenymendes01@gmail.com</a></p>
+        
             <p>Ou ligue para:</p>
             <p>(66) 98444-3942</p>
-<form
-  action="https://formspree.io/f/mnnqpkvy"
-  method="POST">
 
-<label for="nome">Nome:</label>
-<input type="text" id="nome" name="nome">
+            <form action="https://formspree.io/f/mnnqpkvy" method="POST">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome">
 
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email">
 
-<label for="email">E-mail:</label>
-<input type="email" id="email" name="email">
+                <label for="telefone">Telefone:</label>
+                <input type="tel" id="telefone" name="telefone">
 
+                <label for="duvida">Tem alguma dúvida sobre segurança do paciente?</label>
+                <textarea id="duvida" name="duvida"></textarea>
 
-<label for="telefone">Telefone:</label>
-<input type="tel" id="telefone" name="telefone">
-
-
-<label for="duvida">Você tem alguma dúvida?</label>
-<textarea id="duvida" name="duvida"></textarea>
-
-
-<button type="submit">Enviar</button>
-</form>
+                <button type="submit">Enviar</button>
+            </form>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 1s8-Mikael-Mileny</p>
+        <p>&copy; 2025 Téc.Enfermagem-25A-Mikael</p>
     </footer>
 
     <script src="script.js"></script>
