--- a/Index.html
+++ b/Index.html
@@ -43,16 +43,17 @@
         </section>
 
         <section id="beneficios" class="beneficios">
-            <h2>Por que falar sobre isso nas escolas e cursos da saúde?</h2>
-            <ul>
-                <li><strong>Promove uma cultura de cuidado seguro:</strong> Ensinar desde a formação a importância da segurança torna os profissionais mais atentos e comprometidos com a vida do paciente.</li>
-                <li><strong>Reduz erros e eventos adversos:</strong> Conhecer as metas e praticá-las reduz consideravelmente as chances de erros em ambientes clínicos e hospitalares.</li>
-                <li><strong>Garante qualidade no atendimento:</strong> Profissionais treinados em segurança oferecem cuidados mais eficazes e humanos.</li>
-                <li><strong>Fortalece o trabalho em equipe:</strong> A comunicação clara e eficiente entre os profissionais melhora a dinâmica entre equipes multidisciplinares.</li>
-                <li><strong>Contribui para a formação ética e cidadã:</strong> Ter responsabilidade com o cuidado do outro é um valor fundamental para a atuação em saúde.</li>
-                <li><strong>Atende exigências legais e institucionais:</strong> Muitas instituições de saúde já exigem o conhecimento das Metas de Segurança em seus processos de admissão e capacitação.</li>
-            </ul>
-        </section>
+    <h2>Por que este tema é tão importante?</h2>
+    <ul>
+        <li><strong>Porque salva vidas:</strong> Falar sobre segurança do paciente é falar sobre prevenir erros que podem causar sérios danos ou até a morte.</li>
+        <li><strong>Porque envolve todos nós:</strong> Não é só papel dos médicos — enfermeiros, técnicos, estudantes e até os pacientes fazem parte dessa rede de cuidado.</li>
+        <li><strong>Porque formar é também conscientizar:</strong> Ao discutir o tema nas escolas, criamos profissionais mais preparados, éticos e atentos desde o início da carreira.</li>
+        <li><strong>Porque melhora o sistema de saúde:</strong> Um cuidado mais seguro diminui custos, retrabalhos e aumenta a confiança nas instituições de saúde.</li>
+        <li><strong>Porque estamos formando profissionais do futuro:</strong> A responsabilidade com a vida começa na sala de aula. Quem entende isso desde cedo, cuida melhor depois.</li>
+        <li><strong>Porque segurança é um direito de todos:</strong> Todo paciente merece ser cuidado com segurança, atenção e respeito — e isso começa com a nossa atitude.</li>
+    </ul>
+</section>
+
 
         <section id="contato" class="contato">
             <h2>Entre em contato conosco</h2>
