--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Segurança do Paciente</title>
+    <title>Sistematização da Assistência de Enfermagem (SAE)</title>
     <link rel="icon" href="1.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,54 +13,49 @@
 <body>
     <header>
         <div class="logo">
-            <h1>Segurança do Paciente nas Instituições de Saúde</h1>
+            <h1>Sistematização da Assistência de Enfermagem (SAE)</h1>
         </div>
     </header>
 
     <main>
         <section id="introducao" class="introducao">
-            <h2>O que é Segurança do Paciente?</h2>
-            <p>Segurança do paciente é um princípio fundamental na área da saúde que visa minimizar riscos, prevenir danos e promover um cuidado mais seguro. Envolve ações voltadas para evitar erros e falhas nos atendimentos, garantindo que cada paciente receba o melhor cuidado possível.</p>
+            <h2>O que é a SAE?</h2>
+            <p>A Sistematização da Assistência de Enfermagem (SAE) é uma metodologia que organiza o trabalho da enfermagem, garantindo cuidados seguros, eficazes e individualizados. Prevista pela legislação, a SAE fortalece o papel do enfermeiro e contribui para a qualidade da assistência prestada.</p>
             <img src="imagem1-1080x720.webp" alt="Profissionais de saúde cuidando de paciente" class="imagem-borda">
 
-            <p>Historicamente, a segurança do paciente evoluiu ao longo do tempo. Durante a Guerra da Crimeia no século XIX, Florence Nightingale revolucionou os cuidados hospitalares ao implementar práticas de higiene, o que reduziu drasticamente a mortalidade. No Brasil, Ana Nery também contribuiu de forma pioneira para a organização da enfermagem no país, prestando assistência em campos de batalha.</p>
-
-            <p>Com os avanços da medicina no século XX e XXI, percebeu-se a necessidade de sistematizar a segurança nos cuidados, especialmente após evidências do aumento de erros médicos. Em 2004, a Organização Mundial da Saúde (OMS) lançou o programa “Segurança do Paciente”, e em 2005 foram definidas as 6 Metas Internacionais de Segurança.</p>
+            <p>Ela orienta o raciocínio clínico e a tomada de decisões, promovendo uma assistência baseada em evidências. A SAE também facilita a comunicação entre os profissionais e permite o acompanhamento da evolução do paciente.</p>
         </section>
 
         <section id="oque-e" class="oque-e">
-            <h2>Quais são as 6 Metas Internacionais de Segurança do Paciente?</h2>
-            <p>As metas estabelecidas pela OMS orientam profissionais e instituições a adotarem práticas seguras e eficazes. Conheça cada uma:</p>
+            <h2>Quais são as 5 Etapas da SAE?</h2>
+            <p>A SAE é composta por cinco etapas sistemáticas, que permitem o planejamento e execução dos cuidados de enfermagem de forma segura e organizada:</p>
             <ul>
-                <li><strong>1. Identificar corretamente o paciente:</strong> Confirmações duplas de nome, data de nascimento e pulseiras de identificação evitam erros como administração de medicação errada.</li>
-                <li><strong>2. Melhorar a comunicação entre os profissionais:</strong> Informações claras e completas, especialmente durante passagens de plantão ou encaminhamentos, são essenciais para evitar falhas.</li>
-                <li><strong>3. Melhorar a segurança na prescrição e uso de medicamentos:</strong> Padronizar prescrições, revisar doses e garantir orientação adequada aos pacientes reduz riscos com medicamentos.</li>
-                <li><strong>4. Assegurar cirurgias em local, procedimento e paciente corretos:</strong> Protocolos como “pausa cirúrgica” e checklists ajudam a evitar erros durante procedimentos invasivos.</li>
-                <li><strong>5. Reduzir o risco de infecções associadas aos cuidados de saúde:</strong> Práticas como higienização das mãos, esterilização de materiais e controle de antibióticos são fundamentais.</li>
-                <li><strong>6. Reduzir o risco de danos ao paciente por quedas:</strong> Avaliar riscos individuais, usar sinalizações e manter o ambiente seguro são medidas eficazes de prevenção.</li>
+                <li><strong>1. Coleta de Dados (Histórico de Enfermagem):</strong> Coleta de informações subjetivas e objetivas do paciente para entender sua condição clínica.</li>
+                <li><strong>2. Diagnóstico de Enfermagem:</strong> Interpretação dos dados coletados para identificar os problemas reais ou potenciais de saúde. Essa etapa é exclusiva do enfermeiro.</li>
+                <li><strong>3. Planejamento:</strong> Definição das prioridades, metas e intervenções de enfermagem que serão executadas.</li>
+                <li><strong>4. Implementação:</strong> Execução das ações planejadas, como administração de medicamentos, cuidados diretos e orientações.</li>
+                <li><strong>5. Avaliação:</strong> Análise dos resultados obtidos e, se necessário, reformulação do plano de cuidados.</li>
             </ul>
-            <img src="imagem2-1000x714.jpg" alt="Representação das metas de segurança do paciente" class="imagem-borda">
+            <img src="imagem2-1000x714.jpg" alt="Representação das etapas da SAE" class="imagem-borda">
         </section>
 
         <section id="beneficios" class="beneficios">
-    <h2>Por que este tema é tão importante?</h2>
-    <ul>
-        <li><strong>Porque salva vidas:</strong> Falar sobre segurança do paciente é falar sobre prevenir erros que podem causar sérios danos ou até a morte.</li>
-        <li><strong>Porque envolve todos nós:</strong> Não é só papel dos médicos — enfermeiros, técnicos, estudantes e até os pacientes fazem parte dessa rede de cuidado.</li>
-        <li><strong>Porque formar é também conscientizar:</strong> Ao discutir o tema nas escolas, criamos profissionais mais preparados, éticos e atentos desde o início da carreira.</li>
-        <li><strong>Porque melhora o sistema de saúde:</strong> Um cuidado mais seguro diminui custos, retrabalhos e aumenta a confiança nas instituições de saúde.</li>
-        <li><strong>Porque estamos formando profissionais do futuro:</strong> A responsabilidade com a vida começa na sala de aula. Quem entende isso desde cedo, cuida melhor depois.</li>
-        <li><strong>Porque segurança é um direito de todos:</strong> Todo paciente merece ser cuidado com segurança, atenção e respeito — e isso começa com a nossa atitude.</li>
-    </ul>
-</section>
-
+            <h2>Por que entender a SAE é importante?</h2>
+            <ul>
+                <li><strong>Porque melhora a qualidade da assistência:</strong> A SAE garante cuidados mais seguros, baseados em critérios técnicos e científicos.</li>
+                <li><strong>Porque valoriza o profissional de enfermagem:</strong> Ao sistematizar a assistência, o enfermeiro assume papel central no planejamento do cuidado.</li>
+                <li><strong>Porque promove o trabalho em equipe:</strong> A SAE melhora a comunicação entre os membros da equipe de saúde.</li>
+                <li><strong>Porque ajuda na tomada de decisões:</strong> Permite identificar rapidamente necessidades e avaliar os efeitos das intervenções.</li>
+                <li><strong>Porque organiza o cuidado:</strong> Facilita registros, continuidade da assistência e auditorias de qualidade.</li>
+            </ul>
+        </section>
 
         <section id="contato" class="contato">
             <h2>Entre em contato conosco</h2>
-            <p>Se você quiser saber mais sobre segurança do paciente. <a href="https://drive.google.com/drive/folders/1HnufAT94g8kF9NoVHUaKg0Iici0T-e89?usp=sharing">clique aqui para acessar nosso material completo</a> ou envie uma mensagem pelos canais abaixo.</p>
+            <p>Se você quiser saber mais sobre a Sistematização da Assistência de Enfermagem. <a href="https://drive.google.com/drive/folders/1HnufAT94g8kF9NoVHUaKg0Iici0T-e89?usp=sharing">clique aqui para acessar nosso material completo</a> ou envie uma mensagem pelos canais abaixo.</p>
 
             <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
-        
+
             <p>Ou ligue para:</p>
             <p>(66) 98444-3942</p>
 
@@ -74,7 +69,7 @@
                 <label for="telefone">Telefone:</label>
                 <input type="tel" id="telefone" name="telefone">
 
-                <label for="duvida">Tem alguma dúvida sobre segurança do paciente?</label>
+                <label for="duvida">Tem alguma dúvida sobre a SAE?</label>
                 <textarea id="duvida" name="duvida"></textarea>
 
                 <button type="submit">Enviar</button>
